--- a/multiplayer_shooter.html
+++ b/multiplayer_shooter.html
@@ -367,7 +367,7 @@
         let ws;
 
         function connectToServer() {
-            const WEBSOCKET_URL = 'wss://shooter.ubutu.dpdns.org';
+            const WEBSOCKET_URL = 'wss://game.meho.dpdns.org';
 
             ws = new WebSocket(WEBSOCKET_URL);
 
